fix overflow bug on ofsted values

--- a/app/assets/stylesheets/bucks-fis-design-library/_read-only-field.scss
+++ b/app/assets/stylesheets/bucks-fis-design-library/_read-only-field.scss
@@ -13,6 +13,7 @@
     &__value{
         margin: 0px;
         font-size: 1.3rem;
+        word-wrap: anywhere;
         @media screen and (min-width: $breakpoint-m){
             font-size: 1.5rem;
         }
